More style matching WIP

--- a/src/lib/scss/_global.scss
+++ b/src/lib/scss/_global.scss
@@ -1,9 +1,23 @@
 @import 'colors';
-
+html,
+body,
 :root {
     border:0;
     margin:0;
-    padding: 1em;
+    padding: 0;
     background-color: $root-bg;
 }
 
+//locks a landscape view
+@media screen and (orientation: portrait) {
+    html {
+        transform:rotate(-90deg);
+        transform-origin: left top;
+        width: 100vh;
+        height: 100vw;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+}
