--- a/src/lib/scss/_functions.scss
+++ b/src/lib/scss/_functions.scss
@@ -11,5 +11,14 @@
 }
 
 @function px($pixels) {
-    @return calc($pixels / 12) * 1rem;
+    $originalFontSizeInPixels: 12;
+    @return calc($pixels / $originalFontSizeInPixels) * 1rem;
+}
+
+@function text-outline($color: #000, $soft: false){
+    $blur: if($soft, 1, 0);
+    @return px(1) px(1) px($blur) $color,
+    px(-1) px(1) px($blur) $color,
+    px(1) px(-1) px($blur) $color,
+    px(-1) px(-1) px($blur) $color;
 }
