--- a/src/lib/scss/_colors.scss
+++ b/src/lib/scss/_colors.scss
@@ -1,6 +1,6 @@
 $root-bg: #383020;
 $title-color: #7c6818;
 $title-bg: #383838;
-$terminal-bg: #040C00;
-$terminal-text: #3CF800;
+$terminal-bg: #040c00;
+$terminal-text: #3cf800;
 $terminal-text-unmarked: #183018;
