--- a/src/lib/scss/_mixins.scss
+++ b/src/lib/scss/_mixins.scss
@@ -11,8 +11,9 @@
   border: px(1) solid black;
   border-radius: px(5);
   filter: saturate(0.25) brightness(0.25);
-  box-shadow: inset rgba(255, 255, 255, 0.25) px(-5) px(5) px(5),
-    inset rgba(0, 0, 0, 0.5) px(5) px(-5) px(5);
+  box-shadow: 
+    px(-5) px(5) px(5) px(-5) rgba(255, 255, 255, 0.7) inset,
+    px(5) px(-5) px(5) px(-3) rgba(0, 0, 0, 0.5) inset;
   transition: filter 0.2s linear, box-shadow 0.01s linear;
   font-family: title-font();
 }
@@ -30,6 +31,7 @@
 
 @mixin big-button-style-active() {
   filter: saturate(0.7) brightness(0.7);
-  box-shadow: inset rgba(0, 0, 0, 0.75) px(-5) px(5) px(5),
-    inset rgba(0, 0, 0, 0.75) px(5) px(-5) px(5);
+  box-shadow:
+    px(-5) px(5) px(5) rgba(0, 0, 0, 0.75) inset,
+    px(5) px(-5) px(5) rgba(0, 0, 0, 0.75) inset;
 }
