Fixed: some spring issues w/ OneDigitDisplay Sacrificed some visual style for performance in firefox (SVG FILTERS ARE SLOW)

--- a/src/lib/scss/_global.scss
+++ b/src/lib/scss/_global.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+
 html,
 body,
 :root {
@@ -7,8 +8,24 @@ body,
   padding: 0;
   background-color: $root-bg;
 }
-*{
-  box-sizing:border-box;
+
+body {
+  filter: 
+    url(#variance) 
+    url(#grain)
+    saturate(1)
+    brightness(2) 
+    contrast(1.01);
+}
+
+@-moz-document url-prefix() {
+  body{
+    filter: none;
+  }
+}
+
+* {
+  box-sizing: border-box;
 }
 
 //locks a landscape view
