Added: arcade-style push buttons Formatted code

--- a/src/lib/scss/_colors.scss
+++ b/src/lib/scss/_colors.scss
@@ -3,7 +3,7 @@ $title-color: #7c6818;
 $title-bg: #383838;
 $terminal-bg: #040c00;
 $terminal-text: #3cf800;
-$terminal-text-active: #FCFC7C;
-$terminal-text-selected: #A0A0A0;
-$terminal-text-selected-active: #FCFCFC;
+$terminal-text-active: #fcfc7c;
+$terminal-text-selected: #a0a0a0;
+$terminal-text-selected-active: #fcfcfc;
 $terminal-text-unmarked: #183018;
