--- a/src/lib/scss/_global.scss
+++ b/src/lib/scss/_global.scss
@@ -10,16 +10,13 @@ body,
 }
 
 body {
-  filter: 
-    url(#variance) 
-    url(#grain)
-    saturate(1)
-    brightness(2) 
-    contrast(1.01);
+  filter: url(#variance) url(#grain) saturate(1) brightness(2) contrast(1.01);
+  height: 100vh;
+  overflow: hidden;
 }
 
 @-moz-document url-prefix() {
-  body{
+  body {
     filter: none;
   }
 }
