--- a/src/lib/scss/_global.scss
+++ b/src/lib/scss/_global.scss
@@ -9,11 +9,10 @@ body,
   background-color: $root-bg;
 }
 
-
 body {
   height: 100vh;
   overflow: hidden;
-  filter:brightness(1.3);
+  filter: brightness(1.3);
 }
 
 * {
@@ -32,4 +31,14 @@ body {
     top: 100%;
     left: 0;
   }
+}
+
+.worn-text {
+  user-select: none;
+  font-family: title-font();
+  -webkit-mask-image: url('/generated/worn-text.png');
+  mask-image: url('/generated/worn-text.png');
+  color: $title-color;
+  font-weight: 400;
+  text-transform: uppercase;
 }
