Changed: Lato font out, Saira Extra Condensed in

--- a/src/lib/scss/_functions.scss
+++ b/src/lib/scss/_functions.scss
@@ -7,7 +7,7 @@
 }
 
 @function label-font() {
-  @return 'Lato', sans-serif;
+  @return 'Saira Extra Condensed', sans-serif;
 }
 
 @function px($pixels) {
