Improved: help styles

--- a/src/lib/scss/_colors.scss
+++ b/src/lib/scss/_colors.scss
@@ -7,3 +7,4 @@ $terminal-text-active: #fcfc7c;
 $terminal-text-selected: #a0a0a0;
 $terminal-text-selected-active: #fcfcfc;
 $terminal-text-unmarked: #183018;
+$terminal-text-unmarked-active: #707820;
