--- a/src/lib/scss/_mixins.scss
+++ b/src/lib/scss/_mixins.scss
@@ -100,6 +100,6 @@
 }
 
 @mixin slate() {
-  background-color: $root-bg;
+  background-color: hsl(var(--bg));
   box-shadow: var(--basic-box-shadow);
 }
