Moved: $title-color from scss vars to --title-color css vars

--- a/src/lib/scss/_global.scss
+++ b/src/lib/scss/_global.scss
@@ -57,7 +57,7 @@ body {
   font-family: title-font();
   -webkit-mask-image: url('/generated/worn-text.png');
   mask-image: url('/generated/worn-text.png');
-  color: $title-color;
+  color: hsl(var(--title-color));
   font-weight: 400;
   text-transform: uppercase;
 }
