Removed: font-family sass functions, replaced with css vars

--- a/src/lib/scss/_global.scss
+++ b/src/lib/scss/_global.scss
@@ -1,5 +1,3 @@
-@import 'colors';
-
 /* prettier-ignore */
 :root {
   --px: #{px(1)};
@@ -54,7 +52,7 @@ body {
 
 .worn-text {
   user-select: none;
-  font-family: title-font();
+  font-family: var(--title-font);
   -webkit-mask-image: url('/generated/worn-text.png');
   mask-image: url('/generated/worn-text.png');
   color: hsl(var(--title-color));
