--- a/src/lib/scss/_global.scss
+++ b/src/lib/scss/_global.scss
@@ -1,61 +1,4 @@
-/* prettier-ignore */
-:root {
-  --px: #{px(1)};
-  --shadow-border-width: 1;
-  --shadow-border-color: #000;
-  --shadow-border:
-    0 0 0 calc(var(--shadow-border-width) * var(--px)) var(--shadow-border-color);
-  --light-source:
-    calc(-5 * var(--px)) calc(5 * var(--px)) calc(5 * var(--px)) calc(-5 * var(--px)) rgba(255, 255, 255, 0.7) inset,
-    calc(5 * var(--px)) calc(-5 * var(--px)) calc(5 * var(--px)) calc(-3 * var(--px)) rgba(0, 0, 0, 0.5) inset;
-  --sharp-light-source:
-    calc(-2 * var(--px)) calc(2 * var(--px)) calc(2 * var(--px)) calc(-1 * var(--px)) rgba(255, 255, 255, 0.5) inset,
-    calc(2 * var(--px)) calc(-2 * var(--px)) calc(2 * var(--px)) 0 rgba(0, 0, 0, 0.9) inset;
-  --light-source-clear:
-    0 0 0 0 rgba(255, 255, 255, 0) inset,
-    0 0 0 0 rgba(0, 0, 0, 0) inset;
-  --sunken:
-    calc(-5 * var(--px)) calc(5 * var(--px)) calc(5 * var(--px)) rgba(0, 0, 0, 0.75) inset,
-    calc(5 * var(--px)) calc(-5 * var(--px)) calc(5 * var(--px)) rgba(0, 0, 0, 0.75) inset;
-  --sunken-clear:
-    0 0 0 rgba(0, 0, 0, 0) inset, 0 0 0 rgba(0, 0, 0, 0) inset;
-  --cast-shadow:
-    calc(-5 * var(--px)) calc(5 * var(--px)) calc(5 * var(--px)) rgba(0, 0, 0, 0.75);
-  --cast-shadow-clear:
-    0 0 0 0 rgba(0, 0, 0, 0);
-  --inset:
-    calc(2 * var(--px)) calc(-2 * var(--px)) calc(2 * var(--px)) calc(-1 * var(--px)) rgba(0, 0, 0, 0.5),
-    calc(-2 * var(--px)) calc(2 * var(--px)) calc(2 * var(--px)) calc(-1 * var(--px)) rgba(255, 255, 255, 0.5);
-  --underbelly-shadow:
-    0 calc(-4 * var(--px)) calc(2 * var(--px)) 0 rgba(0, 0, 0, 0.4) inset;
-  --basic-box-shadow:
-    calc(-4 * var(--px)) calc(4 * var(--px)) calc(2 * var(--px)) calc(-3 * var(--px)) rgba(255, 255, 255, 0.25) inset,
-    calc(4 * var(--px)) calc(-4 * var(--px)) calc(5 * var(--px)) calc(-5 * var(--px)) rgba(0, 0, 0, 0.3) inset;
-}
-
-.dorky-border {
-  border-top: px(3) solid hsl(var(--bg-hs), calc(var(--bg-l) - 10%));
-  border-left: px(4) solid hsl(var(--bg-hs), calc(var(--bg-l) + 45%));
-  border-right: px(4) solid hsl(var(--bg-hs), calc(var(--bg-l) + 5%));
-  border-bottom: px(3) solid hsl(var(--bg-hs), calc(var(--bg-l) + 25%));
-}
-
-body {
-  height: 100vh;
-  overflow-y: hidden;
-  filter: brightness(1.3);
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.worn-text {
-  user-select: none;
-  font-family: var(--title-font);
-  -webkit-mask-image: url('/generated/worn-text.png');
-  mask-image: url('/generated/worn-text.png');
-  color: hsl(var(--title-color));
-  font-weight: 400;
-  text-transform: uppercase;
+@function px($pixels) {
+  $originalFontSizeInPixels: 10;
+  @return calc($pixels / $originalFontSizeInPixels) * 1rem;
 }
