--- a/src/app.postcss
+++ b/src/app.postcss
@@ -173,3 +173,15 @@ body {
     box-shadow: var(--inset);
   }
 }
+
+.offscreen {
+  pointer-events: none;
+  overflow: hidden;
+  position: fixed;
+  width: 100vw;
+  max-width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
+  bottom: 200vh;
+  right: 200vw;
+}
