--- a/src/app.postcss
+++ b/src/app.postcss
@@ -178,10 +178,10 @@ body {
   pointer-events: none;
   overflow: hidden;
   position: fixed;
-  width: 100vw;
-  max-width: 100vw;
-  height: 100vh;
-  max-height: 100vh;
-  bottom: 200vh;
-  right: 200vw;
+  width: 0;
+  max-width: 0;
+  height: 0;
+  max-height: 0;
+  bottom: 100%;
+  right: 100%;
 }
