--- a/src/app.postcss
+++ b/src/app.postcss
@@ -105,33 +105,35 @@ body {
 
 .checkbox-button {
   appearance: none;
-  transition: box-shadow 0.1s linear;
-  margin: 1rem 9rem;
+  position: relative;
   padding: 0;
   box-sizing: border-box;
-  background-color: #580000;
+  background-color: #2d2b25;
   /* prettier-ignore */
   box-shadow: 
     -2rem 2rem 1rem -1rem rgba(255, 255, 255, 0.25) inset,
+    2rem -2rem 1rem -1rem rgba(0, 0, 0, 0.25) inset,
     1rem -1rem 1rem 0 rgba(0, 0, 0, 0.25) inset,
-    -6rem -3rem 0 0 #2d2b25 inset,
-    6rem 3rem 0 0 #2d2b25 inset,
-    6rem -3rem 1rem 1rem rgba(255, 255, 255, 0.25) inset,
-    0 0 0 1rem rgba(0, 0, 0, 0.25);
-  width: 20rem;
-  height: 12rem;
+    0 0 1rem 1rem rgba(0, 0, 0, 0.25);
+  width: 16rem;
+  height: 10rem;
   border-radius: 3rem;
   border: 1rem solid #040c00;
-  &:active {
+  &:after {
+    content: ' ';
+    position: absolute;
+    background-color: #580000;
+    transition: background-color 0.2s linear;
+    left: 5rem;
+    top: 3rem;
+    width: 5rem;
+    height: 2rem;
+    box-shadow: -1rem 1rem 0rem 0rem rgba(0, 0, 0, 0.25) inset,
+      1rem -1rem 0rem 0rem rgba(0, 0, 0, 0.25),
+      -1rem 1rem 0rem 0rem rgba(255, 255, 255, 0.15);
+  }
+  &:active:after {
     background-color: #fc3030;
-    /* prettier-ignore */
-    box-shadow: 
-      0 0 1rem -1rem rgba(255, 255, 255, 0.25) inset,
-      1rem -1rem 1rem 0 rgba(0, 0, 0, 0.25) inset,
-      -6rem -3rem 0 0 #2d2b25 inset,
-      6rem 3rem 0 0 #2d2b25 inset,
-      6rem -3rem 1rem 1rem rgba(255, 255, 255, 0.25) inset,
-      0 0 0 0 rgba(0, 0, 0, 0.25);
   }
 }
 
@@ -161,7 +163,7 @@ body {
     td {
       padding-left: 12rem;
     }
-    padding: 7rem;
+    padding: 3rem 7rem;
     position: absolute;
     top: 5%;
     bottom: 5%;
