--- a/src/routes/chosen-one/Scaler.postcss
+++ b/src/routes/chosen-one/Scaler.postcss
@@ -1,4 +1,4 @@
 html {
   /* attempts to render largest in-frame window possible */
-  font-size: calc(min(resolve(100vh / 675), resolve(100vw / 890)));
+  font-size: calc(resolve(90vw / 640));
 }
