640x480 WIP (just need modals)

--- a/src/routes/chosen-one/Scaler.postcss
+++ b/src/routes/chosen-one/Scaler.postcss
@@ -1,4 +1,4 @@
 html {
   /* attempts to render largest in-frame window possible */
-  font-size: calc(resolve(90vw / 640));
+  font-size: calc(min(resolve(95vw / 640), resolve(95vh / 480)));
 }
