Can now link to a character, save, or load from disk

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -35,6 +35,9 @@
   --terminal-faded-active-hs: 65.5, 57.9%;
   --terminal-faded-active-l: 29.8%;
   --terminal-faded-active: var(--terminal-faded-active-hs), var(--terminal-faded-active-l);
+  --menu-bg-hs: 40, 27.3%;
+  --menu-bg-l: 17.3%;
+  --menu-bg: var(--menu-bg-hs), var(--menu-bg-l);
 }
 
 /* prettier-ignore */
