--- a/src/app.postcss
+++ b/src/app.postcss
@@ -64,6 +64,12 @@
   --light-source-clear:
     0 0 0 0 rgba(255, 255, 255, 0) inset,
     0 0 0 0 rgba(0, 0, 0, 0) inset;
+  --slb-light-source:
+    inset -5rem 5rem 3rem -4rem rgba(255, 255, 255, 0.4),
+    inset 5rem -5rem 3rem -3rem rgba(0, 0, 0, 0.7);
+  --slb-light-source-clear:
+    inset 0 0 0 0 rgba(255, 255, 255, 0),
+    inset 0 0 0 0 rgba(0, 0, 0, 0);
   --sunken:
     calc(-5 * 1rem) calc(5 * 1rem) calc(5 * 1rem) rgba(0, 0, 0, 0.75) inset,
     calc(5 * 1rem) calc(-5 * 1rem) calc(5 * 1rem) rgba(0, 0, 0, 0.75) inset;
