--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,3 +1,17 @@
+@media (min-height: 0) {
+  :root {
+    font-size: 1px;
+  }
+}
+
+@for $i from 0 to 30 {
+  @media (min-height: resolve(480px * (1.1 + $i * 0.1))) {
+    :root {
+      font-size: resolve(1px * (1.1 + $i * 0.1));
+    }
+  }
+}
+
 * {
   box-sizing: border-box;
 }
