--- a/src/app.postcss
+++ b/src/app.postcss
@@ -166,6 +166,7 @@ body {
       1rem -1rem 1rem 0 rgba(0, 0, 0, 0.25) inset,
       0 0 1rem 1rem rgba(0, 0, 0, 0.25);
   }
+  &:checked:after,
   &:active:after {
     background-color: #fc3030;
   }
