Added: very basic landing page

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -267,3 +267,18 @@ body {
         0 0 0 0.9em hsl(0deg, 0%, 10%) inset;
   }
 }
+
+.interface-structure {
+  padding-left: 10rem;
+  padding-bottom: 8rem;
+  display: grid;
+  grid-template-columns: 160rem 157rem 3rem 305rem;
+  grid-template-rows: 32rem 129rem 90rem 12rem 50rem 128rem 32rem;
+  row-gap: 2rem;
+  column-gap: 2rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  right: 0;
+}
