--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,3 +1,5 @@
+/*
+
 @media (min-height: 0) {
   :root {
     font-size: 1px;
@@ -11,7 +13,7 @@
     }
   }
 }
-
+*/
 * {
   box-sizing: border-box;
 }
