--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,21 +1,16 @@
-/*
-
-@media (min-height: 0) {
-  :root {
-    font-size: 1px;
-  }
-}
-
-@for $i from 0 to 30 {
-  @media (min-height: resolve(480px * (1.1 + $i * 0.1))) {
-    :root {
-      font-size: resolve(1px * (1.1 + $i * 0.0875));
-    }
-  }
-}
-*/
 * {
   box-sizing: border-box;
+  border-spacing: 0;
+}
+td,
+th {
+  padding: 0;
+}
+button {
+  padding: 0;
+}
+table {
+  border-collapse: collapse;
 }
 
 /* prettier-ignore */
