Made derived stat column flexible for more roles

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -178,6 +178,7 @@ body {
 
 .monitor {
   border-radius: 7rem;
+  padding: 7rem 11rem;
   & {
     position: relative;
   }
@@ -196,11 +197,7 @@ body {
       padding-left: 12rem;
     }
     padding: 3rem 7rem;
-    position: absolute;
-    top: 5%;
-    bottom: 5%;
-    left: 7%;
-    right: 7%;
+    height: 100%;
     line-height: 1.7;
     background-color: hsl(var(--terminal-bg));
     border-radius: 8rem 7rem;
